@@ -18,27 +18,14 @@
     background-image: url("assets/noise-texture-dark.png");
 }
 
-
 /*******************
  * check and radio *
  *******************/
 /* draw regular check and radio items using our assets */
-.radio,
-.check {
-    background-clip: border-box;
-    background-repeat: no-repeat;
-    background-position: center center;
-	box-shadow: none;
-	background-color: transparent;
-}
-
 .check,
 .check row:selected,
 .check row:selected:focus {
-	background-image: none;
-    background-image: url("assets/checkbox-unchecked-dark.svg");
-	border-radius: 2px;
-	box-shadow: none;
+    -gtk-icon-source: url("assets/checkbox-unchecked-dark.svg");
 }
 
 .check:insensitive,
@@ -47,104 +34,141 @@
     background-image: url("assets/checkbox-unchecked-insensitive-dark.svg");
 }
 
-.check:active,
-.check row:selected:active,
-.check row:selected:focus:active {
-    background-image: url("assets/checkbox-checked-dark.svg");
+.check:active, .check:checked,
+.check row:selected:active, .check row:selected:checked,
+.check row:selected:focus:active, .check row:selected:focus:checked {
+    -gtk-icon-source: url("assets/checkbox-checked-dark.svg");
 }
 
-.check:active:insensitive,
-.check row:selected:active:insensitive,
-.check row:selected:focus:active:insensitive {
-    background-image: url("assets/checkbox-checked-insensitive-dark.svg");
+/*
+.check:active:hover, .check:checked:hover,
+.check row:selected:active:hover, .check row:selected:checked:hover,
+.check row:selected:focus:active:hover, .check row:selected:focus:checked:hover {
+	-gtk-icon-source: url("assets/checkbox-checked-hover-dark.svg");
 }
+*/
+
+.check:active:insensitive, .check:checked:insensitive,
+.check row:selected:active:insensitive, .check row:selected:checked:insensitive,
+.check row:selected:focus:active:insensitive, .check row:selected:focus:checked:insensitive {
+    -gtk-icon-source: url("assets/checkbox-checked-insensitive-dark.svg");
+}
+
 
 .check:inconsistent,
 .check row:selected:inconsistent,
 .check row:selected:focus:inconsistent {
-    background-image: url("assets/checkbox-mixed-dark.svg");
+    -gtk-icon-source: url("assets/checkbox-mixed-dark.svg");
 }
+
+/*
+.check:inconsistent:hover,
+.check row:selected:inconsistent:hover,
+.check row:selected:focus:inconsistent:hover {
+	-gtk-icon-source: url("assets/checkbox-mixed-hover-dark.svg");
+}
+*/
 
 .check:inconsistent:insensitive,
 .check row:selected:inconsistent:insensitive,
 .check row:selected:focus:inconsistent:insensitive {
-    background-image: url("assets/checkbox-mixed-insensitive-dark.svg");
+    -gtk-icon-source: url("assets/checkbox-mixed-insensitive-dark.svg");
 }
 
 .radio,
 .radio row:selected,
 .radio row:selected:focus {
-    background-image: url("assets/radio-unselected-dark.svg");
+    -gtk-icon-source: url("assets/radio-unselected-dark.svg");
 }
 
 .radio:insensitive,
 .radio row:selected:insensitive,
 .radio row:selected:focus:insensitive {
-    background-image: url("assets/radio-unselected-insensitive-dark.svg");
+    -gtk-icon-source: url("assets/radio-unselected-insensitive-dark.svg");
 }
 
-.radio:active,
-.radio row:selected:active,
-.radio row:selected:focus:active {
-    background-image: url("assets/radio-selected-dark.svg");
+.radio:active, .radio:checked,
+.radio row:selected:active, .radio row:selected:checked,
+.radio row:selected:focus:active, .radio row:selected:focus:checked {
+    -gtk-icon-source: url("assets/radio-selected-dark.svg");
 }
 
-.radio:active:insensitive,
-.radio row:selected:active:insensitive,
-.radio row:selected:focus:active:insensitive {
-    background-image: url("assets/radio-selected-insensitive-dark.svg");
+/*
+.radio:active:hover, .radio:checked:hover,
+.radio row:selected:active:hover, .radio row:selected:checked:hover,
+.radio row:selected:focus:active:hover, .radio row:selected:focus:checked:hover {
+	-gtk-icon-source: url("assets/radio-selected-hover-dark.svg");
+}
+*/
+
+
+.radio:active:insensitive, .radio:checked:insensitive,
+.radio row:selected:active:insensitive, .radio row:selected:checked:insensitive,
+.radio row:selected:focus:active:insensitive, .radio row:selected:focus:checked:insensitive {
+    -gtk-icon-source: url("assets/radio-selected-insensitive-dark.svg");
 }
 
 .radio:inconsistent,
 .radio row:selected:inconsistent,
 .radio row:selected:focus:inconsistent {
-    background-image: url("assets/radio-mixed-dark.svg");
+    -gtk-icon-source: url("assets/radio-mixed-dark.svg");
 }
+
+/*
+.radio:inconsistent:hover,
+.radio row:selected:inconsistent:hover,
+.radio row:selected:focus:inconsistent:hover {
+	-gtk-icon-source: url("assets/radio-mixed-hover-dark.svg");
+}
+*/
 
 .radio:inconsistent:insensitive,
 .radio row:selected:inconsistent:insensitive,
 .radio row:selected:focus:inconsistent:insensitive {
-    background-image: url("assets/radio-mixed-insensitive-dark.svg");
+    -gtk-icon-source: url("assets/radio-mixed-insensitive-dark.svg");
 }
 
-.menuitem.check:active {
-    background-image: url("assets/menuitem-checkbox-checked.svg");
+/**************************
+ * menuitem check & radio *
+ **************************/
+
+.menuitem.check {
+	-gtk-icon-source: -gtk-scaled(url("assets/menuitem-checkbox.svg"));
+	color: @theme_fg_color;
+	icon-shadow: none; 
+}
+.menuitem.check:active, .menuitem.check:checked {
+	-gtk-icon-source: -gtk-scaled(url("assets/menuitem-checkbox-checked.svg"));
+}
+.menuitem.check:inconsistent {
+	-gtk-icon-source: -gtk-scaled(url("assets/menuitem-checkbox-mixed.svg"));
 }
 
 .menuitem.check:active:hover {
-    background-image: url("assets/menuitem-checkbox-checked-hover.svg");
+	color: @theme_selected_fg_color;
+}
+.menuitem.check:insensitive {
+	color: @insensitive_fg_color; 
 }
 
-.menuitem.check:active:insensitive {
-    background-image: url("assets/menuitem-checkbox-checked-insensitive.svg");
+.menuitem.radio {
+	-gtk-icon-source: -gtk-scaled(url("assets/menuitem-radio.svg"));
+	color: @theme_fg_color;
+	icon-shadow: none; 
 }
-
-.menuitem.check:inconsistent:hover,
-.menuitem.radio:inconsistent:hover {
-    background-image: url("assets/menuitem-checkbox-mixed-hover.svg");
+.menuitem.radio:active, .menuitem.radio:checked {
+	-gtk-icon-source: -gtk-scaled(url("assets/menuitem-radio-checked.svg"));
 }
-
-.menuitem.check:inconsistent,
 .menuitem.radio:inconsistent {
-    background-image: url("assets/menuitem-checkbox-mixed.svg");
+	-gtk-icon-source: -gtk-scaled(url("assets/menuitem-radio-mixed.svg"));
+}
+.menuitem.radio:hover {
+	color: @theme_selected_fg_color;
+}
+.menuitem.radio:insensitive {
+	color: @insensitive_fg_color; 
 }
 
-.menuitem.check:inconsistent:insensitive,
-.menuitem.radio:inconsistent:insensitive {
-    background-image: url("assets/menuitem-checkbox-mixed-insensitive.svg");
-}
-
-.menuitem.radio:active {
-    background-image: url("assets/menuitem-radio-checked.svg");
-}
-
-.menuitem.radio:active:hover {
-    background-image: url("assets/menuitem-radio-checked-hover.svg");
-}
-
-.menuitem.radio:active:insensitive {
-    background-image: url("assets/menuitem-radio-checked-insensitive.svg");
-}
 
 GtkIconView.content-view.cell.check {
     background-image: url("assets/grid-selection-unchecked-dark.svg");
@@ -152,26 +176,5 @@ GtkIconView.content-view.cell.check {
 
 GtkIconView.content-view.cell.check:active {
     background-image: url("assets/grid-selection-checked-dark.svg");
-}
-
-/*******************
- * Pane separators *
- *******************/
-.pane-separator {
-    background-image: url("assets/pane-separator-grip-dark.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.pane-separator:hover {
-    background-image: url("assets/pane-separator-grip-prelight-dark.svg");
-}
-
-.pane-separator.vertical {
-    background-image: url("assets/pane-separator-grip-vertical-dark.svg");
-}
-
-.pane-separator.vertical:hover {
-    background-image: url("assets/pane-separator-grip-vertical-prelight-dark.svg");
 }
 
